# musicbrainz-release-grabber

./: Cargo.toml  README.md
src/: config.rs  main.rs  responses.rs  tui.rs
