[package]
name = "musicbrainz-release-grabber"
version = "0.17.2"
edition = "2021"
description = "Check if there are new albums on the musicbrainz release. Give it a folder and it will check the artist ids and save it. Now you can just ask for new releases whenever you want. Don't forget to edit the artists."
categories = ["command-line-utilities"]
repository = "https://github.com/Narfinger/musicbrainz-release-grabber"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
dialoguer = "0.11.0"
directories = "6.0.0"
indicatif = "0.17.11"
ratelimit = "0.10.0"
reqwest = { version = "0.12.12", features = ["blocking", "json", "gzip", "deflate"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_path_to_error = "0.1.16"
time = { version = "0.3.37", features = ["serde", "parsing", "formatting", "serde-human-readable"] }
uuid = { version = "1.12.1", features = ["serde"] }
yansi = "1.0.1"
