[package]
name = "musicbrainz-release-grabber"
version = "1.0.3"
edition = "2021"
description = "Check if there are new albums on the musicbrainz release. Give it a folder and it will check the artist ids and save it. Now you can just ask for new releases whenever you want. Don't forget to edit the artists."
categories = ["command-line-utilities"]
repository = "https://github.com/Narfinger/musicbrainz-release-grabber"
license = "GPL-3.0-only"

[features]
default = ["tui"]
tui = []

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
dialoguer = "0.12.0"
directories = "6.0.0"
indicatif = "0.18.3"
ratatui = "0.30.0"
ratelimit = "0.10.0"
reqwest = { version = "0.13.1", features = [
    "blocking",
    "json",
    "gzip",
    "deflate",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
time = { version = "0.3.47", features = [
    "serde",
    "parsing",
    "formatting",
    "serde-human-readable",
] }
uuid = { version = "1.21.0", features = ["serde"] }
yansi = "1.0.1"
